Fix book searching(still has bugs)